Fix broken index.css to properly display imported font

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 html {
   scroll-behavior: smooth;
@@ -8,17 +8,17 @@ html {
   font-family: Arial, Helvetica, sans-serif;
   background: url("https://images.unsplash.com/photo-1446071103084-c257b5f70672?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2568&q=80") fixed center;
   min-height: 100vh;  
-};
+}
 
 .card img {
   height: 300px;
   object-fit: cover;
-};
+}
 
 .navbar-brand {
-  font-family: 'Bungee Inline', cursive;
-  font-size: 4em !important;
-  color: #1c7b47
+  font-family: 'Satisfy', cursive !important;
+  font-size: 64px !important;
+  color: #e2725b
 }
 
 h1 {
